--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": " a webstore to Buy wholesale clothes",
   "main": "index.js",
   "scripts": {
-    "start": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
